    * References to undefined data are now preserved in the save file, preventing crashes or lost data caused by removing plugins. (@tehhowch)
    * The game will now warn about having a low monitor frame rate, which causes the game to run at a reduced frame rate. (@tehhowch)
  * CI/CD and development environment
    * Make (test-)executables available (for Linux, MacOS and Windows) for every in-progress PR. (@MCOfficer)
    * Update CI/CD environment to the latest GitHub actions and Linux runtime environments. (@MCOfficer)
    * A number of smaller CI/CD updates. (@MCOfficer, @petervdmeer, @tehhowch)
    * Added CLion IDE files to the gitignore. (@Ririshi)
    * The Code::Blocks project file now uses default MinGW paths. (@Terin)
    * Created a unit-testing framework. (@tehhowch)
    * Converted the Windows makefile build to use Scons, to match linux development. (@tehhowch)
    * Added an initial framework for integration testing. (@petervdmeer, @tehhowch)

Version 0.9.12:
  * Bug fixes:
    * Typo fixes. (@Amazinite, @Anarchist2, @Arachi-Lover, @MCOfficer, Mr. Doom, @Naminson, @NomadicVolcano, @petervdmeer, @oo13, @Proont, @tehhowch, @TheMarksman-ES, @waterhouse, @Zitchas)
    * The Penguin now requires a Remnant license to purchase. (@Zitchas)
    * Out-of-system ships can no longer be selected in the outfitter and shipyard. (@tehhowch)
    * Pressing D to depart will no longer also immediately deploy fighters on launch. (@petervdmeer)
    * Fixed various instances of missing or unnecessary minor tags on missions. (@Amazinite, @Anarchist2)
    * Governments now have the same attitude toward the " Hai " government as they do the "Hai" government. (@NomadicVolcano)
    * No longer able to ask the Remnant about the Ka'het before having passed the blood test. (@beccabunny)
    * Max depreciation age now accounts for the 7-day grace period. (@Amazinite)