@@ -255,6 +255,7 @@ Version 0.9.13:
     * The game will use shaders for swizzling if the player's hardware does not have the swizzle extension. (@janisozaur, @thomasballinger)
     * References to undefined data are now preserved in the save file, preventing crashes or lost data caused by removing plugins. (@tehhowch)
     * The game will now warn about having a low monitor frame rate, which causes the game to run at a reduced frame rate. (@tehhowch)
+    * Improved performance of certain repeated effect generation steps. (@tehhowch)
   * CI/CD and development environment
     * Make (test-)executables available (for Linux, MacOS and Windows) for every in-progress PR. (@MCOfficer)
     * Update CI/CD environment to the latest GitHub actions and Linux runtime environments. (@MCOfficer)
